--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,8 +143,8 @@ services:
 
   taiga-gateway:
     image: nginx:1.19-alpine
-    ports:
-      - "9000:80"
+    #ports:
+    #  - "9000:80"
     volumes:
       - ./taiga-gateway/taiga.conf:/etc/nginx/conf.d/default.conf
       - taiga-static-data:/taiga/static
