--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,8 +142,8 @@ services:
 
   taiga-gateway:
     image: nginx:1.19-alpine
-    ports:
-      - "9000:80" # Expose the gateway port (optional, see below)
+    #ports:
+    #  - "9000:80" # Expose the gateway port (optional, see below)
     volumes:
       - ./taiga-gateway/taiga.conf:/etc/nginx/conf.d/default.conf
       - taiga-static-data:/taiga/static
